--- a/ui.ui
+++ b/ui.ui
@@ -3130,6 +3130,26 @@ font-weight: bold;</string>
                   <item>
                    <layout class="QVBoxLayout" name="verticalLayout_15">
                     <item>
+                     <widget class="QLabel" name="label_20">
+                      <property name="text">
+                       <string>Min Radius</string>
+                      </property>
+                      <property name="alignment">
+                       <set>Qt::AlignCenter</set>
+                      </property>
+                     </widget>
+                    </item>
+                    <item>
+                     <widget class="QLabel" name="label_30">
+                      <property name="text">
+                       <string>Max Radius</string>
+                      </property>
+                      <property name="alignment">
+                       <set>Qt::AlignCenter</set>
+                      </property>
+                     </widget>
+                    </item>
+                    <item>
                      <widget class="QLabel" name="label_25">
                       <property name="styleSheet">
                        <string notr="true">color: rgb(255, 255, 255);
@@ -3184,6 +3204,44 @@ font-weight: bold;</string>
                     <property name="spacing">
                      <number>10</number>
                     </property>
+                    <item>
+                     <widget class="QSpinBox" name="min_r_spinbox">
+                      <property name="alignment">
+                       <set>Qt::AlignCenter</set>
+                      </property>
+                      <property name="minimum">
+                       <number>1</number>
+                      </property>
+                      <property name="maximum">
+                       <number>200</number>
+                      </property>
+                      <property name="singleStep">
+                       <number>2</number>
+                      </property>
+                      <property name="value">
+                       <number>1</number>
+                      </property>
+                     </widget>
+                    </item>
+                    <item>
+                     <widget class="QSpinBox" name="max_r_spinbox">
+                      <property name="alignment">
+                       <set>Qt::AlignCenter</set>
+                      </property>
+                      <property name="minimum">
+                       <number>50</number>
+                      </property>
+                      <property name="maximum">
+                       <number>1000</number>
+                      </property>
+                      <property name="singleStep">
+                       <number>2</number>
+                      </property>
+                      <property name="value">
+                       <number>99</number>
+                      </property>
+                     </widget>
+                    </item>
                     <item>
                      <widget class="QDoubleSpinBox" name="sigma_spinbox_hough">
                       <property name="minimumSize">
